# nude

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
nude/: CMakeLists.txt
nude/include/: font.h  nude.h  nude_zep.h  opensans.h  sourcecodepro.h
nude/src/: font.cpp  imgui.ini  nude.cpp
nude_app/: CMakeLists.txt  imgui.ini  nude_app.cpp
nude_tests/: CMakeLists.txt  nude_tests.cpp
submodules/: README.md
templates/: generate_project.py
templates/app_template/: CMakeLists.txt  app_template.cpp
templates/library_name/: CMakeLists.txt
templates/tests/: CMakeLists.txt  test_header.h
